...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">


    <EditText
        android:id="@+id/userInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/book_search_hint"
        android:inputType="textPersonName"
        android:text=""
...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInput"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/libraryList"
        android:layout_width="411dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"></TextView>
...
